--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "jest-evaluator-action",
+  "name": "vitest-evaluator-action",
   "version": "1.2.0",
   "description": "Github action to test javascript projects",
   "main": "evaluator.js",
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "build": "tsc evaluator.ts"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/carlos8v/jest-evaluator-action.git"
+    "url": "git+https://github.com/carlos8v/vitest-evaluator-action.git"
   },
   "author": "Carlos Souza <carlos.pessoal@hotmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/carlos8v/jest-evaluator-action/issues"
+    "url": "https://github.com/carlos8v/vitest-evaluator-action/issues"
   },
-  "homepage": "https://github.com/carlos8v/jest-evaluator-action#readme",
+  "homepage": "https://github.com/carlos8v/vitest-evaluator-action#readme",
   "devDependencies": {
-    "@types/jest": "^28.1.8",
     "@types/node": "^18.7.13",
-    "jest": "^28.1.3",
-    "ts-jest": "^28.0.8",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "vitest": "^0.23.2"
   }
 }
