--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2",
     "vitest": "^0.23.2"
+  },
+  "dependencies": {
+    "@actions/core": "^1.9.1",
+    "@actions/github": "^5.0.3"
   }
 }
