--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "evaluator.js",
   "scripts": {
     "test": "vitest",
-    "build": "tsc evaluator.ts"
+    "build": "tsc src/*.ts"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
     "@types/node": "^18.7.13",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2",
-    "vitest": "^0.23.2"
+    "vitest": "^0.23.2" 
   },
   "dependencies": {
     "@actions/core": "^1.9.1",
