--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "devDependencies": {
     "@types/node": "^18.7.13",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.2",
-    "vitest": "^0.23.2" 
+    "typescript": "^4.8.2"
   },
   "dependencies": {
     "@actions/core": "^1.9.1",
-    "@actions/github": "^5.0.3"
+    "@actions/github": "^5.0.3",
+    "vitest": "^0.23.2"
   }
 }
